[package]
name = "build-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test-server"
path = "tests/bin/test_server.rs"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
clap = { version = "4.5.39", features = ["derive"] }
extend = "1.2.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.13", features = ["tokio"] }
indicatif = "0.18"
strip-ansi-escapes = "0.2"
tracing-indicatif = "0.3"
nix = { version = "0.30.1", features = ["signal"] }
notify = "8.0.0"
pin-project-lite = "0.2.16"
rand = "0.9.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = ["trace", "request-id", "util", "sensitive-headers"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
